--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
             <!-- <img src="static/images/dots.png" alt=""> -->
         </div>
         <div class="container">
-            <form action = "http://localhost:5000/predict" id="booking-form url_form" class="booking-form" method="POST">
+            <form action = "http://localhost:5000/result" id="booking-form url_form" class="booking-form" method="POST">
                 <div class="form-group">
                     <div class="form-destination">
                         <label for="destination">Link</label>
@@ -38,8 +38,8 @@
 
     </div>
     
-    
     <!-- JS -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="static/vendor/jquery/jquery.min.js"></script>
     <script src="static/vendor/jquery-ui/jquery-ui.min.js"></script>
     <script src="static/js/main.js"></script>
